Replace deprecated DatatypeConverter with Base64